LeasedLineTools/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Current_Deal_Margin__c</fullName>
        <label>Current Deal Margin</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Length__c</fullName>
        <label>Deal Length</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncludeInSummary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include In Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Required__c</fullName>
        <label>Monthly Required</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shortfall__c</fullName>
        <label>Shortfall</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Margin__c</fullName>
        <label>Target Margin</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>